--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
@@ -111,13 +111,20 @@
 
 /* Common styles */
 .AdminAllWriter {
+  width: 100%;
+  height: 90vh;
+  /* background-color: yellow; */
     padding: 20px;
   }
   
   .AdminAllWriterWrapper {
+    width: 95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    /* background-color: pink; */
+    overflow-y: scroll;
   }
   
   .AdminAllWriterWrap {
