--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriterDesc/AdminAllWriterDesc.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriterDesc/AdminAllWriterDesc.css
@@ -95,7 +95,8 @@
   }
   
   .user-card1 {
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
+    background-color: #ef3a3a;
     border-radius: 8px;
     padding: 20px;
     display: flex;
@@ -103,6 +104,7 @@
     /* align-items: center; */
     justify-content: space-between;
     text-align: left;
+    overflow-y: scroll;
   }
   
   .user-info1 {
