--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -34,14 +34,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-decoration: 
-  none;
+  text-decoration: none;
   /* align-items: center; */
 }
 
 .task-title1 {
   font-size: 1.2rem;
   margin-bottom: 5px;
+  color: black;
 }
 
 .task-description1 {
@@ -65,6 +65,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: black;
 }
 
 .statusstate1 {
