--- a/src/Component2/UserDashboard/UserDahRight/TaskUpdate/TaskUpdateWeb.css
+++ b/src/Component2/UserDashboard/UserDahRight/TaskUpdate/TaskUpdateWeb.css
@@ -92,7 +92,7 @@
     }
     .task{
         width: 300px;
-        height: 300px;
+        height: 400px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -104,12 +104,30 @@
     color: white;
     border: none;
     border-radius: 4px;
-    padding: 8px 16px;
+    padding: 12px 16px;
     margin: 4px;
     cursor: pointer;
   }
   .time{
     gap: 20px;
+  }
+  }
+
+  @media screen and (max-width: 362px) {
+    .mainnz{
+      width: 100%;
+      height: 100%;
+      /* background-color: yellow; */
+      padding-right: 30%;
+    }
+    .task{
+      width: 70vw;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      /* background-color: aqua; */
   }
   }
   
