--- a/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
+++ b/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
@@ -97,8 +97,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 20px;
-        font-size: 20px;
+        gap: 15px;
+        font-size: 17px;
         /* font-family: 'poppins, sans-serif'; */
         /* padding-top: 70%; */
         /* background-color: red; */
@@ -112,13 +112,14 @@
         padding-left: 0;
         /* background-color: red; */
       }
-      /* .logoimage{
-        background-color: rgb(216, 58, 84);
-        width: 30vw;
+       .logoimage{
+        /* background-color: rgb(216, 58, 84); */
+        margin-left: 30%;
+        /* width: 30vw;
         height: 80%;
-        padding-top: 10%;
+        padding-top: 10%; */
       }
-      .logoimage img{
+     /* .logoimage img{
         width: 100%;
         height: 100%;
         object-fit: contain;
@@ -202,8 +203,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 25px;
-        font-size: 20px;
+        gap: 15px;
+        font-size: 17px;
         /* font-family: 'poppins, sans-serif'; */
         padding: 10px;
         margin-top: 13%;
