--- a/src/Component2/UserDashboard/UserDashLeft/UserDashLeft.css
+++ b/src/Component2/UserDashboard/UserDashLeft/UserDashLeft.css
@@ -84,11 +84,11 @@
     width: 100%;
     height: 10%;
     /* background-color: black; */
-    font-family: 'poppins, sans-serif';
+    /* font-family: 'poppins, sans-serif'; */
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    font-size: 25px;
+    font-size: 17px;
     color: white;
     cursor: pointer;
     gap: 10px;
@@ -137,7 +137,7 @@
     justify-content: space-between;
     align-items: center;
     /* font-size: large; */
-    font-family: 'poppins, sans-serif';
+    /* font-family: 'poppins, sans-serif'; */
     cursor: pointer;
     color: white;
 }
