--- a/src/Authentication/LoginPage/AdminReset/AdminResetPassword.css
+++ b/src/Authentication/LoginPage/AdminReset/AdminResetPassword.css
@@ -4,6 +4,7 @@
     background-color: #0455B4;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .admin-reset-container {
@@ -77,4 +78,14 @@
   margin: 0;
   font-size: 16px;
   color: #333333;
+}
+
+.Show2{
+  color: #0455B4;
+  background-color: white;
+  position: absolute;
+  right: 40%;
+  top: 49%;
+  font-size: 20px;
+  cursor: pointer;
 }
