--- a/src/Authentication/SignUpPage/SignUp.css
+++ b/src/Authentication/SignUpPage/SignUp.css
@@ -100,14 +100,14 @@
 }
 .SignUpInputWrap1{
     width: 100%;
-    /* background-color: aliceblue; */
-    height: 9%;
+    /* background-color: rgb(9, 134, 244); */
+    height: 25%;
     display: flex;
-    justify-content: center;
-    gap: 170px;
+    justify-content: space-between;
+    /* gap: 270px; */
 }
 .SignUpInputWrap1 button{
-    width: 35%;
+    width: 25%;
     height: 100%;
     background-color: #0455B4;
     border-radius: 5px;
@@ -131,6 +131,7 @@
     display: flex;
     /* align-items: center; */
     justify-content: center;
+    padding-right: 55%;
   }
   .SignUpInputWrap3 span{
     width: 100%;
@@ -171,136 +172,3 @@
     font-size: 16px;
     color: #333333;
   }
-/* 
-@keyframes heartBeat {
-  0% {
-    transform: scale(1);
-  }
-  14% {
-    transform: scale(1.3);
-  }
-  28% {
-    transform: scale(1);
-  }
-  42% {
-    transform: scale(1.3);
-  }
-  70% {
-    transform: scale(1);
-  }
-} */
-
-/* .SignUpWrap{
-    width: 50%;
-    height: 95%;
-    background-color: gray;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid red;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    position: relative;
-}
-
-.SignUpimage{
-    width: 100%;
-    height: 50%;
-} 
-
-.SignUpimage img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.SignUp{
-    width: 100%;
-    height: 50%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 20%;
-    z-index: 500;
-}
-
-.SignUpWrap2{
-    width: 50%;
-    height: 70%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 30%;
-    right: 2%;
-}
-
-.signUpText{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;    
-}
-
-.SignUpInput{
-    width: 100%;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-}
-
-.SignUpInputWrap{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.SignUpInputWrap input{
-    width: 100%;
-    height: 100%;
-    outline: none;
-    padding-left: 30px;
-    border-radius: 0;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 1px solid #ccc;
-    background-color: transparent;
-}
-
-.Show{
-    font-size: 30px;
-    color: #0455B4;
-    position: absolute;
-    right: 0;
-    cursor: pointer;
-}
-
-.SignUpInputWrap1{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.SignUpInputWrap1 button{
-    width: 100%;
-    height: 50px;
-    background-color: #0455B4;
-    border: none;
-    border-radius: 7px;
-    color: white;
-    cursor: pointer;
-} */
