--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -74,24 +74,30 @@
         top: 0;
         /* background-color: green; */
     }
-    /* .SignUpInputWrap1 {
-        width: 100%;
-        height: 70%;
-        background-color: blueviolet;
-    } */
-    .SignUpInputWrap button{
+    .SignUpInputWrap1 {
+        width: 80%;
+        height: 20%;
+        /* background-color: rgb(16, 171, 238); */
+        gap: 110px;
+    }
+    .SignUpInputWrap1 .BTN{
         width: 100%;
         height: 100%;
+        /* padding-left: 20%; */
         border-radius: 5px;
-        padding: 10px;
+        padding: 20px 10% 20px 10%;
         background-color: #0455B4;
+        /* background-color: #0455B4; */
     }
     .SignUpInputWrap3{
         width: 100%;
         height: 20%;
         /* background-color: yellow; */
         display: flex;
-        /* font-size: 20px; */
+        flex-direction: row;
+        font-size: 15px;
+        white-space: nowrap;
+        padding-left: 20%;
     }
     .SignUpInputWrap3 span{
         color: #0455B4;
@@ -105,7 +111,7 @@
       }
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 768px) {
     .SignUpPage{
         width: 100%;
         height: 100vh;
@@ -182,7 +188,7 @@
         height: 10vh;
         border-radius: 5px;
         padding: 10px;
-        background-color: #0455B4;
+        /* background-color: #0455B4; */
     }
 }
 
@@ -238,7 +244,7 @@
         /* padding-right: 0; */
     }
     .SignUpInputWrap1 button{
-        width: 20%;
+        width: 40%;
         font-size: 25px;
     }
     .SignUpInputWrap3{
