--- a/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
+++ b/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
@@ -125,6 +125,6 @@ padding-left: 10px;
     margin-top: 38%;
     padding-left: 5%;
     gap: 10px; */
-    background-color: red;
+    /* background-color: red; */
   }
 }
