--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -65,7 +65,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
+  color: #555;
+  /* color: black; */
 }
 
 .statusstate1 {
