--- a/src/Component2/Pages/About/About.css
+++ b/src/Component2/Pages/About/About.css
@@ -33,8 +33,12 @@ body {
   }
   
   .team {
-    background: #f9f9f9;
+    /* background: #f9f9f9; */
     padding: 50px 0;
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .member {
@@ -44,10 +48,17 @@ body {
     margin: 20px;
   } 
   
+.abtfooter{
+  /* background-color: pink; */
+  width: 100%;
+  height: 10vh;
+  padding-top: 5%;
+}
   
   
-  @media (max-width: 768px) {
-  
-  
-  
+  @media (max-width: 426px) {
+    .content{
+      background-color: red;
+      padding-right: 30%;
+    }
   }
