--- a/src/Component2/Pages/Profile/Profile.css
+++ b/src/Component2/Pages/Profile/Profile.css
@@ -1,183 +1,3 @@
-/* .Profilepage{
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.ProfilepageWrap{
-    width: 70%;
-    height: 100%;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-}
-.profileview{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.backArrow{
-    width: 100%;
-    height: 5%;
-}
-.ProfileName{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 2px solid #0455B4;
-}
-.ProfileDesc{
-    width: 100%;
-    height: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.ProfileDescWrap{
-    width: 90%;
-    height: 100%;
-    border: 2px solid #0455B4;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.FirSurNAme{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-}
-.FirName{
-    width: 48%;
-    height: 90%;
-}
-.FirstName{
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0455B4;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-}
-.SrName{
-    width: 48%;
-    height: 90%;
-}
-.SurName{
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0455B4;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-}
-.UserEmail{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-}
-.User{
-    width: 48%;
-    height: 90%;
-}
-.UserName{
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0455B4;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-}
-.Email{
-    width: 48%;
-    height: 90%;
-}
-.EmailWrap{
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0455B4;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-}
-.PassComp{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-}
-.Pass{
-    width: 48%;
-    height: 90%; 
-    padding-top: 4%;
-    cursor: pointer;
-}
-.Password{
-    /* width: 100%;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-}
-.Pass:hover{
-    border-bottom: 1px solid #0455B4;
-    color: #0455B4;
-    transition: 1.5s;
-}
-.Comp{
-    width: 48%;
-    height: 90%;
-}
-.Company{
-    width: 100%;
-    height: 100%;
-    border: 1px solid #0455B4;
-    display: flex;
-    align-items: center;
-    padding-left: 10px; 
-}
-.ProfileFooter{
-    width: 100%;
-    height: 40%;
-    background-color: #0455B4;
-}
-
-@media screen and (max-width: 768px) {
-    .Profilepage{
-        width: 100%;
-        height: 90vh;
-        background-color: aliceblue;
-    }
-    .ProfileDescWrap{
-        width: 90%;
-        height: 100%;
-        border: 2px solid #0455B4;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-
-@media screen and (max-width: 426px) {
-    .Profilepage{
-        width: 100%;
-        height: 90vh;
-        background-color: blue;
-    }
-} */
-
-/* Profile.css */
-
-/* Common styles */
 .Profilepage {
     /* padding: 20px; */
     height: 90vh;
@@ -241,20 +61,24 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  .ProfileFooter {
+  .ProfileDescWrap .ProfileFooter {
+    width: 100%;
+    height: 10vh;
+  }
+
+  .Del{
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
+    justify-content: space-between;
+    /* background-color: yellow; */
   }
   
-  .ProfileFooter button {
-    border: none;
-    padding: 20px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: red;
-    padding-bottom: 30px;
-    /* height: 10%; */
+  .ProfileDescWrap .ProfileFooter .Pbtn {
+    width: 15%;
+    height: 10vh;
+    background-color: rgb(179, 16, 16);
+    font-size: 15px;
   }
   
   /* Mobile styles */
