--- a/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
+++ b/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
@@ -176,7 +176,7 @@
     .content{
         width: 100%;
         height: 70%;
-        /* background-color: #acd0f9; */
+        background-color: #0455B4;
         gap: 13px;
         /* margin-top: 5%; */
     }
