--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
@@ -14,66 +14,71 @@
     color: white;
 }
 .AdminDashRightHeader_Wrap{
-    width: 95%;
+    width: 90%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* background-color: pink; */
 }
 /* HomeDashboard.css */
 
 .AdminUserIcon{
     display: none;
 }
-.welcome-message {
-    /* padding: 16px; */
-    width: 80%;
-    height: 90%;
-    background-color: #0455B4;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 15%;
-    margin-left: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    animation: backInDown;
-    animation-duration: 2s;
-  }
-  
-  .welcome-message h3 {
-    margin: 0;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .welcome-message p {
-    margin-top: 8px;
-    font-size: 16px;
-    color: #949494;
-  }
-  /* .welcome-animation {
-    opacity: 0;
-    transform: translateY(-20px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-    margin-left: 35%;
-    margin-top: 25%;
-  }
-  
-  .show-welcome-animation {
-    opacity: 1;
-    transform: translateY(0);
-    color: #0455B4;
-    font-size: 40px;
-  } */
+
+.optUser1{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: white;
+  color: #0455B4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+  /* margin-left: 0px; */
+}
+
+.userprofile{
+  width: 7%;
+  height: 15%;
+  background: white;
+  position: absolute;
+  top: 10%;
+  left: 22.5%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  transition: all 320ms ease-in ;
+  padding: 10px;
+}
+
+.userbox{
+  font-size: 15px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+
+.userbox li{
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 5%;
+  color: #0455B4;
+  cursor: pointer;
+}
   
 @media screen and (max-width: 426px){
     .AdminUserIcon{
         display: flex;
     }
-    .AdminNotificationIcon{
+    .AdminDashRightHeader_Wrap h3{
         display: none;
     }
 .Adminsidebar_MobileView{
@@ -154,7 +159,7 @@
     .AdminUserIcon{
         display: flex;
     }
-    .AdminNotificationIcon{
+    .AdminDashRightHeader_Wrap h3{
         display: none;
     }
 .Adminsidebar_MobileView{
