--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssignPage/AdminTaskAssignPAge.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssignPage/AdminTaskAssignPAge.css
@@ -9,7 +9,7 @@
     margin-bottom: 20px;
   }
   
-  input,
+  .task-form input,
   textarea {
     width: 100%;
     padding: 8px;
@@ -51,60 +51,35 @@
     font-size: 14px;
     color: #666;
   }
-  .task-list .AdmintaskoverviewStatus{
-    width: 39%;
-    height: 100%;
-    background-color: none;
-    /* background-color: black; */
-    display: flex;
-    align-items: center;
-    justify-content: center ;
-    gap: 10px;
+  
+  /* AdminTaskAssignPage.css */
+
+.time-input {
+  display: flex;
+  align-items: center;
+  /* margin-top: 2px; */
+  /* background-color: red; */
 }
-.AdmintaskoverviewStatus button {
-  background-color: #0455B4;
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  cursor: pointer;
-  padding-top: 10px;
+
+.label-container {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
 }
-.Admintaskoverviewcolor1{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
-.Admintaskoverviewcolor2{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: yellow;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
+
+select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 60px;
 }
-.Admintaskoverviewcolor3{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-}
+
 
 .popup {
   position: fixed;
