--- a/src/Component2/Pages/Profile/Profile.css
+++ b/src/Component2/Pages/Profile/Profile.css
@@ -10,6 +10,11 @@
     height: 100%;
     overflow-y: scroll;
   }
+
+  .ProfilepageWrap::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
   
   .profileview {
     display: flex;
@@ -60,6 +65,10 @@
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+
+  .Pass {
+    cursor: pointer;
+  }
   
   .ProfileDescWrap .ProfileFooter {
     width: 100%;
@@ -76,8 +85,8 @@
   
   .ProfileDescWrap .ProfileFooter .Pbtn {
     width: 15%;
-    height: 10vh;
-    background-color: rgb(179, 16, 16);
+    height: 8vh;
+    background-color: #dc3545;
     font-size: 15px;
   }
   
@@ -100,6 +109,12 @@
   
     .ProfileDescWrap {
       grid-template-columns: 1fr;
+    }
+    .ProfileDescWrap .ProfileFooter .Pbtn {
+      width: 20%;
+      height: 8vh;
+      background-color: #dc3545;
+      font-size: 13px;
     }
   }
   
