--- a/src/Authentication/LoginPage/AdminForgotPassword/AdminForgotPassword.css
+++ b/src/Authentication/LoginPage/AdminForgotPassword/AdminForgotPassword.css
@@ -58,6 +58,7 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
   }
   
   .input-container input {
