--- a/src/Authentication/SignOut/SignOut.css
+++ b/src/Authentication/SignOut/SignOut.css
@@ -23,6 +23,9 @@
     /* background-color: gray; */
     text-align: center;
 }
+.signupdecision h3{
+    color: #0455B4;
+}
 .signupOption{
     width: 100%;
     height: 30%;
@@ -37,7 +40,8 @@
     height: 50px;
     font-size: 18px;
     border-radius: 5px;
-    /* background-color: #0455B4; */
+    background-color: #0455B4;
+    color: white;
     /* background-color: red; */
 }
 .signupOption .signOptionCancel1:hover{
