--- a/src/Authentication/SignUpPage/SignUp.css
+++ b/src/Authentication/SignUpPage/SignUp.css
@@ -1,7 +1,7 @@
 .SignUpPage{
     width: 100%;
     height: 99.4vh;
-    /* background-color: rgb(242, 42, 42) ; */
+    background-color: white ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,6 +55,9 @@
     align-items: center;
     color: #0455B4;
 }
+.signUpText h3{
+  color: #0455B4;
+}
 .SignUpInput{
     width: 80%;
     /* background-color: yellow; */
@@ -75,6 +78,10 @@
     height: 80%;
     /* background-color: aqua; */
     outline: none;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    border-bottom: 1px solid #0455B4;
 }
 .SignUpInputWrap2{
     width: 100%;
@@ -89,11 +96,12 @@
     width: 100%;
     height: 60%;
     outline: none;
+    border-bottom: 1px solid #0455B4;
 }
 .Show{
     color: #0455B4;
     position: absolute;
-    top: 62%;
+    top: 59%;
     /* bottom: 6%; */
     right: 7%;
     font-size: 20px;
@@ -112,6 +120,7 @@
     background-color: #0455B4;
     border-radius: 5px;
     cursor: pointer;
+    color: white;
 }
 
 .sign-in-link.animate__heartBeat {
@@ -137,6 +146,9 @@
     width: 100%;
     color: #0455B4;
     cursor: pointer;
+  }
+  .SignUpInputWrap3 p{
+    color: black;
   }
   .popup {
     position: fixed;
