--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -82,12 +82,12 @@
     }
     .SignUpInputWrap1 .BTN{
         width: 100%;
-        height: 100%;
+        height: 80%;
         /* padding-left: 20%; */
         border-radius: 5px;
         padding: 20px 10% 20px 10%;
         background-color: #0455B4;
-        /* background-color: #0455B4; */
+        /* background-color: #04b43f; */
     }
     .SignUpInputWrap3{
         width: 100%;
