--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -310,10 +310,17 @@
         align-items: center;
         justify-content: center;
     }
-    .optUser{
+    .optUsers{
         width: 80px;
-        height: 80px;
+        height: 95px;
         font-size: 30px;
+        border-radius: 50%;
+        background: #000;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
     }
     .Dash1{
         width: 100%;
