--- a/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
+++ b/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
@@ -40,22 +40,40 @@
   gap: 20px;
   /* background-color: pink; */
 }
-.Admintask{
+.Admintaskside{
+  /* background-color: aqua; */
+  width: 100%;
+  height: 50px;
+  color: white;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding-left: 10px;
+}
+/* .taskovertxt{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+} */
+/* .Admintask{
   width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
   gap: 10px;
 color: white;
-padding-left: 10px;
-
-}
-.Admintask:hover{
+} */
+/* .Admintask p{
+  padding-top: 20px;
+} */
+.Admintaskside:hover{
   background-color: white;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   color: #0455B4;
 }
+
 .AdminSignOutDiv{
   width: 100%;
   height: 10%;
@@ -68,17 +86,20 @@ padding-left: 10px;
   /* margin-left: 5%; */
   gap: 10px;
 }
+/* .TASk{
+  margin-bottom: 20px;
+} */
 .AdminSignOutDiv:hover{
   background-color: white;
   border-radius: 8px;
   cursor: pointer;
   color: #0455B4;
 }
-.AdminsidebarNav_Wrap .Admintask.active {
+.AdminsidebarNav_Wrap .Admintaskside.active {
   background-color: white; /* Change this to the desired active background color */
   color: #0455B4; /* Change this to the desired active text color */
 }
-.AdminsidebarNav_Wrap .Admintask.active:hover {
+.AdminsidebarNav_Wrap .Admintaskside.active:hover {
   background-color: white;
   color: #0455B4; /* Change this to the desired hover background color for active tab */
 }
