--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
@@ -10,7 +10,7 @@
 .AdminDashCreateWriterwrap{
     width: 80%;
     height: 90%;
-    background-color: aliceblue; 
+    /* background-color: rgb(254, 254, 254);  */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,6 +25,9 @@
     justify-content: center;
     flex-direction: column;
     border-radius: 20px;
+}
+.AdminDashCreateWriterActionCenter p{
+    color: black;
 }
 .AdminCreateWriterAdd{
     width: 100%;
@@ -53,6 +56,6 @@
     .AdminDashCreateWriterActionCenter{
         width: inherit;
         height: 40%;
-        background-color: white;
+        /* background-color: white; */
     }
 }
