--- a/src/Component2/Pages/ConatctUs/Contact Us.css
+++ b/src/Component2/Pages/ConatctUs/Contact Us.css
@@ -17,6 +17,19 @@
     background-color: #0455B4;
   }
   
+  .contact-card1 {
+    /* background: #b06666; */
+    background: white;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+  }
   .contact-card {
     /* background: #b06666; */
     background: white;
@@ -25,8 +38,13 @@
     text-align: center;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     margin: 5px;
+    
     /* display: flex;
     gap: 20px; */
+  }
+
+  .contact-card p{
+    color: black;
   }
   
   .fas {
