--- a/src/Component2/Pages/Profile/UserProfile.css
+++ b/src/Component2/Pages/Profile/UserProfile.css
@@ -238,13 +238,28 @@
     justify-content: flex-end;
     margin-top: 20px;
   }
-  
+
+  .ProfileFooter .Del{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   button {
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
   }
+  
+  /* .ProfileFooter .Del .Ubtn {
+    width: 15%;
+    height: 8vh;
+    background-color: #dc3545;
+    font-size: 15px;
+  } */
   
   /* Mobile styles */
   @media (max-width: 767px) {
